@@ -22,7 +22,7 @@ Conflicts: lava-scheduler, lava-dashboard
 Replaces: lava-scheduler, lava-dashboard
 Depends: apache2, adduser, fuse, libapache2-mod-uwsgi, libjs-jquery-cookie,
  libapache2-mod-wsgi, lshw, iproute2, python-daemon, python-dateutil,
- python-django-auth-openid (>= 0.5-2), diffstat,
+ python-django-auth-openid (>= 0.5-2), diffstat, libjs-jquery-flot (>= 0.8.2),
  openssh-client, postgresql, postgresql-client, postgresql-common,
  ${python:Depends}, ${misc:Depends}
 Recommends: ntp, lava-coordinator, lava-server-doc
